it reads files properly now